fix too long lines in reference

--- a/mkdocs-docs/docs/overrides/assets/stylesheets/extra.css
+++ b/mkdocs-docs/docs/overrides/assets/stylesheets/extra.css
@@ -33,5 +33,22 @@
 .md-header__button.md-logo img,
 .md-header__button.md-logo svg {
     height: 50%;
-    width: 60%;
+    width: 50%;
+}
+
+/* the module name can be too long, set break settings to prevent overlapping the TOC */
+.doc.doc-heading {
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;  
+}
+
+.doc.doc-heading:hover {
+    overflow: visible;            /* Reveal the full content */
+    width: 80%;
+    white-space: normal;          /* Allow text to wrap */
+    z-index: 10;                  /* Ensure it overlays nearby elements */
+    max-width: fit-content;       /* Expand to content width */
+    word-break: break-word;       /* Enable word breaks */
 }
